--- a/mops.toml
+++ b/mops.toml
@@ -1,3 +1,9 @@
+[package]
+name = "icrc1"
+version = "0.1.0"
+description = "ICRC1 Motoko Implementation"
+repository = "https://github.com/NashAiomos/icrc1_motoko"
+
 [dependencies]
 base = "0.13.0"
 array = "https://github.com/aviate-labs/array.mo#v0.2.0@863a668bcbb3c3799a62c36b2cba2c32d1fcc433"
@@ -5,8 +11,4 @@ StableTrieMap = "https://github.com/NatLabs/StableTrieMap#main@4781cb03efd34b124
 StableBuffer = "https://github.com/canscale/StableBuffer#v0.2.0@1af0e8814bac5ca7ed23a6c094204b46d9056c2e"
 itertools = "0.2.2"
 
-[package]
-name = "icrc1"
-version = "0.1.0"
-description = ""
-repository = ""
+
